Add template download endpoint
